@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-12T16:16:20Z",
-  "count_outdated" : 385,
-  "uniques_outdated" : 209,
-  "count" : 418,
+  "timestamp" : "2022-07-13T01:02:00Z",
+  "count_outdated" : 387,
+  "uniques_outdated" : 210,
+  "count" : 419,
   "uniques" : 226,
   "clones" : [
-    {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
