@@ -1,12 +1,7 @@
 {
-  "count": 33,
+  "count": 32,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-29T00:00:00Z",
       "count": 2,
